pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMemberNotImplemented1.pkl
abstract class AbstractProperty {
  abstract foo: Int
}

abstract class AbstractMethod {
  abstract function foo(): Int
}

abstract class AbstractPropertiesAndMethods {
  abstract foo: Int
  abstract bar: Int
  abstract function foo(): Int
  abstract function bar(): Int
}

class MyClass extends AbstractProperty {
}

foo: MyClass
